--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "js-cookie": "^3.0.5",
+    "mongoose": "^7.3.1",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
