--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^7.3.1",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
