Create Checkout Wizard - Place Order Screen

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://sdsspadmin:sdssp123@cluster0.tjhkaae.mongodb.net/sds-shopping-portal?retryWrites=true&w=majority
+SECRET=sdssp123
