--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://sdsspadmin:sdssp123@cluster0.tjhkaae.mongodb.net/sds-shopping-portal?retryWrites=true&w=majority
 SECRET=sdssp123
+NEXTAUTH_URL=http://localhost:3000
