--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://sdsspadmin:sdssp123@cluster0.tjhkaae.mongodb.net/sds-shopping-portal?retryWrites=true&w=majority
 SECRET=sdssp123
 NEXTAUTH_URL=http://localhost:3000
+PAYPAL_CLIENT_ID=AadHZSoD_4UGn-2FS8j1AnJiayha3jHBiGe0Ay7k85WsMNuE1acluSC2mtn0od_ymPhgDVrhxmBZdiCZ
