--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "js-cookie": "^3.0.5",
@@ -21,6 +22,7 @@
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-toastify": "^9.1.3"
