--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
+    "cloudinary": "^1.41.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "js-cookie": "^3.0.5",
