Update .env file

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-MONGODB_URI=mongodb+srv://sdsspadmin:sdssp123@cluster0.tjhkaae.mongodb.net/sds-shopping-portal?retryWrites=true&w=majority
-SECRET=sdssp123
+MONGODB_URI=
+SECRET=
 NEXTAUTH_URL=http://localhost:3000
-PAYPAL_CLIENT_ID=AadHZSoD_4UGn-2FS8j1AnJiayha3jHBiGe0Ay7k85WsMNuE1acluSC2mtn0od_ymPhgDVrhxmBZdiCZ
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=de3xmhnak
-NEXT_PUBLIC_CLOUDINARY_API_KEY=361364716747777
-CLOUDINARY_SECRET=Glsl-EH98Hs4oTc43MksyejAqyk
-CLOUDINARY_URL=cloudinary://361364716747777:Glsl-EH98Hs4oTc43MksyejAqyk@de3xmhnak
+PAYPAL_CLIENT_ID=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_API_KEY=
+CLOUDINARY_SECRET=
+CLOUDINARY_URL=
